--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ references:
       only: /v[0-9]+(\.[0-9]+)*/
 
   default_container_config: &default_container_config
-    working_directory: ~/dewey-runbooks
+    working_directory: ~/project
     docker:
       - image: circleci/node:8.10.0
 
