--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 		"start": "nodemon -r dotenv/config server/app.js",
 		"debug": "npm start -- --inspect=0.0.0.0:9229",
 		"test:debug": "npm run test-dev --  --inspect-brk",
-		"test": "nyc mocha -- \"+(server|test|schema)/**/*.spec.js\"",
-		"test-dev": "NODE_ENV=test mocha --require dotenv/config 'test/**/*.spec.js'",
-		"init-db": "node -r dotenv/config schema/init-db.js",
+		"test": "CONSOLE_LOG_LEVEL=error nyc mocha -- \"+(server|test)/**/*.spec.js\"",
+		"test-dev": "CONSOLE_LOG_LEVEL=error NODE_ENV=test mocha --require dotenv/config 'test/**/*.spec.js'",
+		"init-db": "node -r dotenv/config server/init-db.js",
 		"docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
 		"vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
 		"vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env",
@@ -60,6 +60,7 @@
 		"ext": "js,graphql,yaml"
 	},
 	"dependencies": {
+		"@financial-times/biz-ops-schema": "0.0.2",
 		"@financial-times/n-cluster": "^1.0.0",
 		"@financial-times/n-logger": "^5.6.4",
 		"@financial-times/s3o-middleware": "^2.0.6",
@@ -80,6 +81,7 @@
 		"lodash": "^4.17.10",
 		"neo4j-driver": "^1.6.1",
 		"neo4j-graphql-js": "~0.1.28",
+		"sinon": "^6.2.0",
 		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
@@ -100,7 +102,6 @@
 		"nyc": "^11.8.0",
 		"prettier": "~1.12.1",
 		"proxyquire": "^2.0.1",
-		"sinon": "^6.1.3",
 		"sinon-chai": "^3.0.0",
 		"supertest": "^3.1.0"
 	}
