--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"http-errors": "^1.6.3",
 		"isomorphic-fetch": "^2.2.1",
 		"js-yaml": "^3.12.0",
+		"jsforce": "^1.9.1",
 		"lodash": "^4.17.10",
 		"neo4j-driver": "^1.6.1",
 		"neo4j-graphql-js": "~0.1.28",
