--- a/schema/types/Group.yaml
+++ b/schema/types/Group.yaml
@@ -2,7 +2,7 @@ name: Group
 description: An overarching group which contains teams and is costed separately
 properties:
   code:
-    type: String
+    type: Word
     required: true
     unique: true
     canIdentify: true
@@ -10,12 +10,12 @@ properties:
     label: Code
     description: 'Unique code/id for this item'
   name:
-    type: String
+    type: Word
     canIdentify: true
     label: Name
     description: The name of the group
   description:
-    type: String
+    type: Paragraph
     label: Description
     description: What the group does
   isActive:
