--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -3,29 +3,29 @@ pluralName: People
 description: A individual within the organisation who is contactable
 properties:
   code:
-    type: String
+    type: Word
     required: true
     unique: true
     canIdentify: true
     label: Code
     description: 'Unique code/id for this person'
   name:
-    type: String
+    type: Word
     canIdentify: true
     label: Name
     description: The name of the person
   email:
-    type: String
+    type: Word
     canIdentify: true
     label: Email
     description: The email address of the person
   slack:
-    type: String
+    type: Word
     canIdentify: true
     label: Slack
     description: The slack link for the person
   phone:
-    type: String
+    type: Word
     canIdentify: true
     label: Phone
     description: The phone contact number for the person
