--- a/schema/types/Product.yaml
+++ b/schema/types/Product.yaml
@@ -2,7 +2,7 @@ name: Product
 description: Anything sold by the FT for use by an external entity, OR produced by an area of FT technology to be used by another internal area.
 properties:
   code:
-    type: String
+    type: Word
     required: true
     unique: true
     canIdentify: true
@@ -10,11 +10,11 @@ properties:
     label: Code
     description: 'Unique code/id for this item'
   description:
-    type: String
+    type: Paragraph
     label: Description
     description: Brief description of what the product does
   name:
-    type: String
+    type: Word
     canIdentify: true
     label: Name
     description: The name generally used to refer to the product
@@ -25,7 +25,7 @@ properties:
     label: Service tier
     description: The product's service tier level
   primaryURL:
-    type: String
+    type: Url
     canIdentify: true
     label: Primary URL
     description: The main url the product is served on
