--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -2,7 +2,7 @@ name: System
 description: Any combination of software and technical infrastructure used by the business, engineering or operations
 properties:
   code:
-    type: String
+    type: Word
     required: true
     unique: true
     canIdentify: true
@@ -10,22 +10,22 @@ properties:
     label: Code
     description: 'Unique code/id for this item'
   name:
-    type: String
+    type: Word
     canIdentify: true
     label: Name
     description: Display name of the system
   description:
-    type: String
+    type: Paragraph
     canIdentify: true
     label: Description
     description: Description of the system
   primaryURL:
-    type: String
+    type: Url
     canIdentify: true
     label: Primary URL
     description: The primary URL of the system
   systemType:
-    type: String
+    type: Word
     canFilter: true
     label: System type
     description: The system type
@@ -35,12 +35,12 @@ properties:
     label: Service tier
     description: The system's service tier level
   serviceType:
-    type: String
+    type: Word
     canFilter: true
     label: Service type
     description: The type of service the system provides
   hostPlatform:
-    type: String
+    type: Word
     canFilter: true
     label: Host platform
     description: The platform the service is hosted on, e.g. Heroku
@@ -60,7 +60,7 @@ properties:
     label: Lifecylce stage
     description: The lifecycle stage of the system
   SF_ID:
-    type: String
+    type: Word
     canFilter: true
     label: Salesforce ID
     description: ID of the system in salesforce (required for change-logging as of june 2018)
