--- a/schema/types/Team.yaml
+++ b/schema/types/Team.yaml
@@ -2,7 +2,7 @@ name: Team
 description: A team within the organisation
 properties:
   code:
-    type: String
+    type: Word
     required: true
     unique: true
     canIdentify: true
@@ -10,22 +10,27 @@ properties:
     label: Code
     description: 'Unique code/id for this item'
   name:
-    type: String
+    type: Word
     canIdentify: true
     label: Name
     description: The team's name
+  description:
+    type: Paragraph
+    canIdentify: true
+    label: Description
+    description: Description of the team
   email:
-    type: String
+    type: Word
     canIdentify: true
     label: Email
     description: The team's email address
   slack:
-    type: String
+    type: Word
     canIdentify: true
     label: Slack
     description: The team's slack contact address
   phone:
-    type: String
+    type: Word
     canIdentify: true
     label: Phone
     description: The team's phone contact number
@@ -40,10 +45,10 @@ properties:
     label: Third party
     description: Whether or not the team is a supplier
   supportRota:
-    type: String
+    type: Url
     label: Support rota
     description: Url linking to details of the system's support rota
   contactPref:
-    type: String
+    type: Word
     label: Preferred contact method
     description: Preferred contact method
