--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -8,7 +8,7 @@ properties:
     canIdentify: true
     pattern: CODE
     label: Code
-    description: 'Unique code/id for this item'
+    description: Unique code/id for this item. Once created it should (in most cases) never be altered
   name:
     type: Word
     canIdentify: true
@@ -18,17 +18,17 @@ properties:
     type: Paragraph
     canIdentify: true
     label: Description
-    description: Description of the system
+    description: Brief overview of what the system does and how
   primaryURL:
     type: Url
     canIdentify: true
     label: Primary URL
-    description: The primary URL of the system
+    description: The main url served the system
   systemType:
     type: Word
     canFilter: true
     label: System type
-    description: The system type
+    description: The system type (don't worry about entering anything here)
   serviceTier:
     type: ServiceTier
     canFilter: true
@@ -38,7 +38,7 @@ properties:
     type: Word
     canFilter: true
     label: Service type
-    description: The type of service the system provides
+    description: The type of service the system provides  (don't worry about entering anything here)
   hostPlatform:
     type: Word
     canFilter: true
@@ -54,24 +54,24 @@ properties:
     canFilter: true
     label: Contains sensitive data
     description: Whether the system contains sensitive data
+  risk:
+    type: Paragraph
+    label: Data risk
+    description: More details of what kind of data is held/processesed in this system, and what the associated risks are
   lifecycleStage:
     type: SystemLifecycle
     canFilter: true
-    label: Lifecylce stage
-    description: The lifecycle stage of the system
+    label: Lifecycle stage
+    description: The system lifecycle stage of the system
   SF_ID:
     type: Word
     canFilter: true
     label: Salesforce ID
-    description: ID of the system in salesforce (required for change-logging as of june 2018)
+    description: ID of the system in salesforce **DO NOT EDIT**
   architectureDiagram:
     type: Document
     label: Architecture Diagram
     description: A diagram of the system's architecture (either a link to one or embedded directly)
-  moreInformation:
-    type: Document
-    label: More Information
-    description: Any additional information about the system
   troubleshooting:
     type: Document
     label: Troubleshooting
@@ -80,4 +80,7 @@ properties:
     type: Document
     label: Monitoring
     description: Details of any monitoring the system has
-
+  moreInformation:
+    type: Document
+    label: More Information
+    description: Any additional information about the system
