--- a/schema/types/Group.yaml
+++ b/schema/types/Group.yaml
@@ -26,26 +26,26 @@ properties:
   costCentre:
     type: CostCentre
     direction: incoming
-    name: costCentre
+    label: Cost Centre
     relationship: PAYS_FOR
     description: The Cost Centre associated with the group
   techDirector:
     type: Person
     direction: outgoing
-    name: techDirector
+    label: Tech Director
     relationship: HAS_TECH_DIRECTOR
     description: The tech director who owns the group
   topLevelTeams:
     type: Team
     direction: outgoing
-    name: topLevelTeams
+    label: Top level teams
     relationship: HAS_TEAM
     description: The top level teams working under the group
     hasMany: true
   allTeams:
     type: Team
+    label: All teams
     direction: outgoing
-    name: allTeams
     relationship: HAS_TEAM
     description: The teams working under the group
     hasMany: true
