--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -87,54 +87,54 @@ properties:
   stakeholders:
     type: Person
     direction: outgoing
-    name: stakeholders
+    label: Stakeholders
     relationship: HAS_STAKEHOLDER
     description: The system's stakeholders
     hasMany: true
   repositories:
     type: Repository
     direction: outgoing
-    name: repositories
+    label: Repositories
     relationship: HAS_REPO
     description: The repositories which store the system's source code
     hasMany: true
   monitoredBy:
     type: Healthcheck
     direction: outgoing
-    name: monitoredBy
+    label: Healtchecks
     relationship: MONITORED_BY
     description: Healthchecks which are used to monitor this system
     hasMany: true
   deliveredBy:
     type: Team
     direction: outgoing
-    name: deliveredBy
+    label: Delivered by team
     relationship: DELIVERED_BY
     description: The team which delivers the system
   supportedBy:
     type: Team
     direction: outgoing
-    name: supportedBy
+    label: Supported by team
     relationship: SUPPORTED_BY
     description: The team which supports the system
   knownAboutBy:
     type: Person
     direction: outgoing
-    name: knownAboutBy
+    label: Known about by
     relationship: KNOWN_ABOUT_BY
     description: People who know about the system
     hasMany: true
   dependencies:
     type: System
     direction: outgoing
-    name: dependencies
+    label: Dependencies
     relationship: DEPENDS_ON
     description: The other systems the system directly depends on
     hasMany: true
   recursiveDependencies:
     type: System
     direction: outgoing
-    name: recursiveDependencies
+    label: Recursive dependencies
     relationship: DEPENDS_ON
     description: 'The other systems the system depends on, either directly or indirectly'
     hasMany: true
@@ -142,14 +142,14 @@ properties:
   dependents:
     type: System
     direction: incoming
-    name: dependents
+    label: Dependents
     relationship: DEPENDS_ON
     description: The other systems which directly depend on this system
     hasMany: true
   recursiveDependents:
     type: System
     direction: incoming
-    name: recursiveDependents
+    label: Recursive dependents
     relationship: DEPENDS_ON
     description: >-
       The other systems which depend on this system, either directly or
@@ -159,14 +159,14 @@ properties:
   dependentProducts:
     type: Product
     direction: incoming
-    name: dependentProducts
+    label: Dependent products
     relationship: DEPENDS_ON
     description: Products which depend on this system
     hasMany: true
   recursiveDependentProducts:
     type: Product
     direction: incoming
-    name: recursiveDependentProducts
+    label: Recursive dependent products
     relationship: DEPENDS_ON
     description: 'The products which depend on this system, either directly or indirectly'
     hasMany: true
@@ -174,7 +174,7 @@ properties:
   stores:
     type: Repository
     direction: incoming
-    name: stores
+    label: Repositories
     relationship: STORED_IN
     description: 'If the system is a VCS, the repositories it stores'
     hasMany: true
