--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -36,43 +36,43 @@ properties:
     description: Whether or not the person is still working at the FT
   techDirectorFor:
     type: Group
+    label: Tech director for group
     direction: incoming
-    name: techDirectorFor
     relationship: HAS_TECH_DIRECTOR
     description: Groups the person is a technical director for
     hasMany: true
   techLeadFor:
     type: Team
+    label: Tech lead for teams
     direction: incoming
-    name: techLeadFor
     relationship: HAS_TECH_LEAD
     description: Teams the person is a technical lead for
     hasMany: true
   ownedTeams:
     type: Team
     direction: incoming
-    name: ownedTeams
+    label: Product owner for teams
     relationship: HAS_PRODUCT_OWNER
     description: Teams the person is a product owner for
     hasMany: true
   ownedProducts:
     type: Product
     direction: incoming
-    name: ownedProducts
+    label: Product owner for products
     relationship: HAS_PRODUCT_OWNER
     description: Products the person is a product owner for
     hasMany: true
   stakeholderFor:
     type: System
     direction: incoming
-    name: stakeholderFor
+    label: Stakeholder for systems
     relationship: HAS_STAKEHOLDER
     description: Systems the person is a stakeholder for
     hasMany: true
   knowsAbout:
     type: System
     direction: incoming
-    name: knowsAbout
+    label: Knows about systems
     relationship: KNOWN_ABOUT_BY
     description: Systems the person knows about
     hasMany: true
