--- a/schema/types/Repository.yaml
+++ b/schema/types/Repository.yaml
@@ -68,13 +68,13 @@ properties:
   systems:
     type: System
     direction: incoming
-    name: systems
+    label: Systems
     relationship: HAS_REPO
     description: Systems which the repository holds source code for
     hasMany: true
   storedIn:
     type: System
     direction: outgoing
-    name: storedIn
+    label: Stored in
     relationship: STORED_IN
     description: VCS provider that the repository is hosted by
