--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -8,65 +8,78 @@ properties:
     canIdentify: true
     pattern: CODE
     label: Code
+    section: general
     description: Unique code/id for this item. Once created it should (in most cases) never be altered
   name:
     type: Word
     canIdentify: true
     label: Name
     description: Display name of the system
+    section: general
   description:
     type: Paragraph
     canIdentify: true
     label: Description
     description: Brief overview of what the system does and how
+    section: general
   primaryURL:
     type: Url
     canIdentify: true
     label: Primary URL
     description: The main url served by the system
+    section: general
   systemType:
     type: Word
     canFilter: true
     label: System type
     description: The system type (don't worry about entering anything here)
+    section: technical
   serviceTier:
     type: ServiceTier
     canFilter: true
     label: Service tier
     description: The system's service tier level
+    section: general
   serviceType:
     type: Word
     canFilter: true
     label: Service type
     description: The type of service the system provides  (don't worry about entering anything here)
+    section: general
   hostPlatform:
     type: Word
     canFilter: true
     label: Host platform
     description: The platform the service is hosted on, e.g. Heroku
+    section: technical
   containsPersonalData:
     type: Boolean
     canFilter: true
     label: Contains personal data
     description: Whether the system contains personal PI2 data
+    section: risk
   containsSensitiveData:
     type: Boolean
     canFilter: true
     label: Contains sensitive data
     description: Whether the system contains sensitive data
+    section: risk
   risk:
     type: Paragraph
     label: Data risk
     description: More details of what kind of data is held/processesed in this system, and what the associated risks are
+    section: risk
   lifecycleStage:
     type: SystemLifecycle
     canFilter: true
     label: Lifecycle stage
     description: The system lifecycle stage of the system
+    section: technical
   SF_ID:
     type: Word
     canFilter: true
     label: Salesforce ID
+    hidden: true
     description: ID of the system in salesforce **DO NOT EDIT**
   architectureDiagram:
     type: Document
@@ -80,6 +93,7 @@ properties:
     type: Document
     label: Monitoring
     description: Details of any monitoring the system has
+    section: monitoring
   moreInformation:
     type: Document
     label: More Information
@@ -90,12 +104,14 @@ properties:
     label: Stakeholders
     relationship: HAS_STAKEHOLDER
     description: The system's stakeholders
+    section: ownership
     hasMany: true
   repositories:
     type: Repository
     direction: outgoing
     label: Repositories
     relationship: HAS_REPO
+    section: technical
     description: The repositories which store the system's source code
     hasMany: true
   monitoredBy:
@@ -105,24 +121,28 @@ properties:
     relationship: MONITORED_BY
     description: Healthchecks which are used to monitor this system
     hasMany: true
+    section: monitoring
   deliveredBy:
     type: Team
     direction: outgoing
     label: Delivered by team
     relationship: DELIVERED_BY
     description: The team which delivers the system
+    section: ownership
   supportedBy:
     type: Team
     direction: outgoing
     label: Supported by team
     relationship: SUPPORTED_BY
     description: The team which supports the system
+    section: ownership
   knownAboutBy:
     type: Person
     direction: outgoing
     label: Known about by
     relationship: KNOWN_ABOUT_BY
     description: People who know about the system
+    section: ownership
     hasMany: true
   dependencies:
     type: System
@@ -131,6 +151,7 @@ properties:
     relationship: DEPENDS_ON
     description: The other systems the system directly depends on
     hasMany: true
+    section: technical
   recursiveDependencies:
     type: System
     direction: outgoing
@@ -139,6 +160,7 @@ properties:
     description: 'The other systems the system depends on, either directly or indirectly'
     hasMany: true
     isRecursive: true
+    section: technical
   dependents:
     type: System
     direction: incoming
@@ -146,6 +168,7 @@ properties:
     relationship: DEPENDS_ON
     description: The other systems which directly depend on this system
     hasMany: true
+    section: technical
   recursiveDependents:
     type: System
     direction: incoming
@@ -156,6 +179,7 @@ properties:
       indirectly
     hasMany: true
     isRecursive: true
+    section: technical
   dependentProducts:
     type: Product
     direction: incoming
@@ -178,3 +202,14 @@ properties:
     relationship: STORED_IN
     description: 'If the system is a VCS, the repositories it stores'
     hasMany: true
+sections:
+  general:
+    heading: General information
+  risk:
+    heading: Data risk
+  monitoring:
+    heading: Monitoring
+  ownership:
+    heading: Ownership & knowledge
+  technical:
+    heading: General tech
