--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -33,7 +33,7 @@ properties:
     canFilter: true
     label: System type
     description: The system type (don't worry about entering anything here)
-    section: technical
+    section: general
   serviceTier:
     type: ServiceTier
     canFilter: true
@@ -51,7 +51,7 @@ properties:
     canFilter: true
     label: Host platform
     description: The platform the service is hosted on, e.g. Heroku
-    section: technical
+    section: general
   containsPersonalData:
     type: Boolean
     canFilter: true
@@ -74,7 +74,7 @@ properties:
     canFilter: true
     label: Lifecycle stage
     description: The system lifecycle stage of the system
-    section: technical
+    section: general
   SF_ID:
     type: Word
     canFilter: true
@@ -85,10 +85,12 @@ properties:
     type: Document
     label: Architecture Diagram
     description: A diagram of the system's architecture (either a link to one or embedded directly)
+    section: self
   troubleshooting:
     type: Document
     label: Troubleshooting
     description: Guidance for troubleshooting problems with the system
+    section: self
   monitoring:
     type: Document
     label: Monitoring
@@ -98,6 +100,7 @@ properties:
     type: Document
     label: More Information
     description: Any additional information about the system
+    section: self
   stakeholders:
     type: Person
     direction: outgoing
@@ -111,7 +114,7 @@ properties:
     direction: outgoing
     label: Repositories
     relationship: HAS_REPO
-    section: technical
+    section: network
     description: The repositories which store the system's source code
     hasMany: true
   monitoredBy:
@@ -151,7 +154,7 @@ properties:
     relationship: DEPENDS_ON
     description: The other systems the system directly depends on
     hasMany: true
-    section: technical
+    section: network
   recursiveDependencies:
     type: System
     direction: outgoing
@@ -160,7 +163,7 @@ properties:
     description: 'The other systems the system depends on, either directly or indirectly'
     hasMany: true
     isRecursive: true
-    section: technical
+    section: network
   dependents:
     type: System
     direction: incoming
@@ -168,7 +171,7 @@ properties:
     relationship: DEPENDS_ON
     description: The other systems which directly depend on this system
     hasMany: true
-    section: technical
+    section: network
   recursiveDependents:
     type: System
     direction: incoming
@@ -179,7 +182,7 @@ properties:
       indirectly
     hasMany: true
     isRecursive: true
-    section: technical
+    section: network
   dependentProducts:
     type: Product
     direction: incoming
@@ -187,6 +190,7 @@ properties:
     relationship: DEPENDS_ON
     description: Products which depend on this system
     hasMany: true
+    section: network
   recursiveDependentProducts:
     type: Product
     direction: incoming
@@ -195,6 +199,7 @@ properties:
     description: 'The products which depend on this system, either directly or indirectly'
     hasMany: true
     isRecursive: true
+    section: network
   stores:
     type: Repository
     direction: incoming
@@ -202,14 +207,17 @@ properties:
     relationship: STORED_IN
     description: 'If the system is a VCS, the repositories it stores'
     hasMany: true
+    section: network
 sections:
   general:
     heading: General information
+  ownership:
+    heading: Ownership & knowledge
+  network:
+    heading: Related resources
   risk:
     heading: Data risk
   monitoring:
     heading: Monitoring
-  ownership:
-    heading: Ownership & knowledge
-  technical:
-    heading: General tech
+
+
