--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -8,113 +8,112 @@ properties:
     canIdentify: true
     pattern: CODE
     label: Code
-    section: general
+    fieldset: general
     description: Unique code/id for this item. Once created it should (in most cases) never be altered
   name:
     type: Word
     canIdentify: true
     label: Name
     description: Display name of the system
-    section: general
+    fieldset: general
   description:
     type: Paragraph
     canIdentify: true
     label: Description
     description: Brief overview of what the system does and how
-    section: general
+    fieldset: general
   primaryURL:
     type: Url
     canIdentify: true
     label: Primary URL
     description: The main url served by the system
-    section: general
+    fieldset: general
   systemType:
     type: Word
     canFilter: true
     label: System type
     description: The system type (don't worry about entering anything here)
-    section: general
+    fieldset: general
   serviceTier:
     type: ServiceTier
     canFilter: true
     label: Service tier
     description: The system's service tier level
-    section: general
+    fieldset: general
   serviceType:
     type: Word
     canFilter: true
     label: Service type
     description: The type of service the system provides  (don't worry about entering anything here)
-    section: general
+    fieldset: general
   hostPlatform:
     type: Word
     canFilter: true
     label: Host platform
     description: The platform the service is hosted on, e.g. Heroku
-    section: general
+    fieldset: general
   containsPersonalData:
     type: Boolean
     canFilter: true
     label: Contains personal data
     description: Whether the system contains personal PI2 data
-    section: risk
+    fieldset: risk
   containsSensitiveData:
     type: Boolean
     canFilter: true
     label: Contains sensitive data
     description: Whether the system contains sensitive data
-    section: risk
+    fieldset: risk
   risk:
     type: Paragraph
     label: Data risk
     description: More details of what kind of data is held/processesed in this system, and what the associated risks are
-    section: risk
+    fieldset: risk
   lifecycleStage:
     type: SystemLifecycle
     canFilter: true
     label: Lifecycle stage
     description: The system lifecycle stage of the system
-    section: general
+    fieldset: general
   SF_ID:
     type: Word
     canFilter: true
     label: Salesforce ID
-    hidden: true
     description: ID of the system in salesforce **DO NOT EDIT**
   architectureDiagram:
     type: Document
     label: Architecture Diagram
     description: A diagram of the system's architecture (either a link to one or embedded directly)
-    section: self
+    fieldset: self
   troubleshooting:
     type: Document
     label: Troubleshooting
     description: Guidance for troubleshooting problems with the system
-    section: self
+    fieldset: self
   monitoring:
     type: Document
     label: Monitoring
     description: Details of any monitoring the system has
-    section: monitoring
+    fieldset: monitoring
   moreInformation:
     type: Document
     label: More Information
     description: Any additional information about the system
-    section: self
+    fieldset: self
   stakeholders:
     type: Person
     direction: outgoing
     label: Stakeholders
     relationship: HAS_STAKEHOLDER
     description: The system's stakeholders
-    section: ownership
+    fieldset: ownership
     hasMany: true
   repositories:
     type: Repository
     direction: outgoing
     label: Repositories
     relationship: HAS_REPO
-    section: network
+    fieldset: network
     description: The repositories which store the system's source code
     hasMany: true
   monitoredBy:
@@ -124,28 +123,28 @@ properties:
     relationship: MONITORED_BY
     description: Healthchecks which are used to monitor this system
     hasMany: true
-    section: monitoring
+    fieldset: monitoring
   deliveredBy:
     type: Team
     direction: outgoing
     label: Delivered by team
     relationship: DELIVERED_BY
     description: The team which delivers the system
-    section: ownership
+    fieldset: ownership
   supportedBy:
     type: Team
     direction: outgoing
     label: Supported by team
     relationship: SUPPORTED_BY
     description: The team which supports the system
-    section: ownership
+    fieldset: ownership
   knownAboutBy:
     type: Person
     direction: outgoing
     label: Known about by
     relationship: KNOWN_ABOUT_BY
     description: People who know about the system
-    section: ownership
+    fieldset: ownership
     hasMany: true
   dependencies:
     type: System
@@ -154,7 +153,7 @@ properties:
     relationship: DEPENDS_ON
     description: The other systems the system directly depends on
     hasMany: true
-    section: network
+    fieldset: network
   recursiveDependencies:
     type: System
     direction: outgoing
@@ -163,7 +162,7 @@ properties:
     description: 'The other systems the system depends on, either directly or indirectly'
     hasMany: true
     isRecursive: true
-    section: network
+    fieldset: network
   dependents:
     type: System
     direction: incoming
@@ -171,7 +170,7 @@ properties:
     relationship: DEPENDS_ON
     description: The other systems which directly depend on this system
     hasMany: true
-    section: network
+    fieldset: network
   recursiveDependents:
     type: System
     direction: incoming
@@ -182,7 +181,7 @@ properties:
       indirectly
     hasMany: true
     isRecursive: true
-    section: network
+    fieldset: network
   dependentProducts:
     type: Product
     direction: incoming
@@ -190,7 +189,7 @@ properties:
     relationship: DEPENDS_ON
     description: Products which depend on this system
     hasMany: true
-    section: network
+    fieldset: network
   recursiveDependentProducts:
     type: Product
     direction: incoming
@@ -199,7 +198,7 @@ properties:
     description: 'The products which depend on this system, either directly or indirectly'
     hasMany: true
     isRecursive: true
-    section: network
+    fieldset: network
   stores:
     type: Repository
     direction: incoming
@@ -207,8 +206,8 @@ properties:
     relationship: STORED_IN
     description: 'If the system is a VCS, the repositories it stores'
     hasMany: true
-    section: network
-sections:
+    fieldset: network
+fieldsets:
   general:
     heading: General information
   ownership:
@@ -219,5 +218,3 @@ sections:
     heading: Data risk
   monitoring:
     heading: Monitoring
-
-
