--- a/schema/types/Product.yaml
+++ b/schema/types/Product.yaml
@@ -9,31 +9,36 @@ properties:
     pattern: STRICT_CODE
     label: Code
     description: 'Unique code/id for this item'
+    fieldset: general
   description:
     type: Paragraph
     label: Description
     description: Brief description of what the product does
+    fieldset: general
   name:
     type: Word
     canIdentify: true
     label: Name
     description: The name generally used to refer to the product
+    fieldset: general
   serviceTier:
     type: ServiceTier
-    # required: true
     canFilter: true
     label: Service tier
     description: The product's service tier level
+    fieldset: general
   primaryURL:
     type: Url
     canIdentify: true
     label: Primary URL
     description: The main url the product is served on
+    fieldset: general
   lifecycleStage:
     type: ProductLifecycle
     canFilter: true
     label: Lifecycle stage
     description: Lifecycle stage of the product
+    fieldset: general
   productOwners:
     type: Person
     direction: outgoing
@@ -41,6 +46,7 @@ properties:
     relationship: HAS_PRODUCT_OWNER
     description: The product's owner
     hasMany: true
+    fieldset: network
   dependencies:
     type: System
     direction: outgoing
@@ -48,6 +54,7 @@ properties:
     relationship: DEPENDS_ON
     description: The systems the product directly depends on
     hasMany: true
+    fieldset: network
   recursiveDependencies:
     type: System
     direction: outgoing
@@ -56,6 +63,7 @@ properties:
     description: 'The systems the product depends on, either directly or indirectly'
     hasMany: true
     isRecursive: true
+    fieldset: network
   productDependencies:
     hasMany: true
     hidden: true
@@ -64,6 +72,7 @@ properties:
     direction: outgoing
     description: Products that this product depends on
     label: Product dependencies
+    fieldset: network
   productDependents:
     hasMany: true
     hidden: true
@@ -72,3 +81,9 @@ properties:
     direction: incoming
     description: Products that depend on this product
     label: Product dependents
+    fieldset: network
+fieldsets:
+  general:
+    heading: General information
+  network:
+    heading: Network
