--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -54,7 +54,7 @@ properties:
   source:
     type: Word
     label: Source
-    description: Where the data for this person comes from, via People API: workday, salesforce, ldap, github, slack, multi.
+    description: Where the data for this person comes from, via People API - workday, salesforce, ldap, github, slack, multi.
     fieldset: general
   techDirectorFor:
     type: Group
