Check for self fieldsets and remove their label since the fieldset heading will act as the label. Retitle the monitoring field within the monitoring fieldset.

--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -92,7 +92,7 @@ properties:
     fieldset: self
   monitoring:
     type: Document
-    label: Monitoring
+    label: Bespoke Monitoring
     description: Details of any monitoring the system has
     fieldset: monitoring
   moreInformation:
