--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -59,7 +59,7 @@ properties:
   proposedId:
     type: Word
     label: Source
-    description: Where the data for this person comes from, via People API - workday, salesforce, ldap, github, slack, multi.
+    description: this user's id in: workday, ldap, github or slack. `namelastname` if no id found.
     fieldset: general
   techDirectorFor:
     type: Group
