--- a/schema/types/Healthcheck.yaml
+++ b/schema/types/Healthcheck.yaml
@@ -11,8 +11,12 @@ properties:
   isLive:
     type: Boolean
     canFilter: true
-    label: Should the results of this healthcheck be surfaced to our Operations Support team?
-    description: All our production systems which are used by any customer (internal or external) should be shown to Operations Support. Reasons for not showing it include lower environments (eg test or staging) or a product which hasn't yet been launched to any customers.
+    label: Surface results to our Operations Support team?
+    description: |
+      All our production systems which are used by any customer (internal or external)
+      should be shown to Operations Support. Reasons for not showing it include
+      lower environments (eg test or staging) or a product which hasn't yet been
+      launched to any customers.
     trueLabel: Show to Operations Support
     falseLabel: Not yet needed by Operations Support
   url:
