--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -10,42 +10,49 @@ properties:
     label: Code
     description: 'Unique code/id for this person'
     fieldset: general
+    autoPopulated: true
   name:
     type: Word
     canIdentify: true
     label: Name
     description: The name of the person
     fieldset: general
+    autoPopulated: true
   email:
     type: Word
     canIdentify: true
     label: Email
     description: The email address of the person
-    fieldset: general
+    fieldset: contact
+    autoPopulated: true
   slack:
     type: Word
     label: Slack
     canIdentify: true
     description: The slack link for the person (deprecated)
-    fieldset: general
+    fieldset: contact
+    autoPopulated: true
   slackName:
     type: Word
     canIdentify: true
     label: Slack Name
     description: The slack name for the person
-    fieldset: general
+    fieldset: contact
+    autoPopulated: true
   slackID:
     type: Word
     canIdentify: true
     label: Slack ID
     description: The slack id for the person
-    fieldset: general
+    fieldset: contact
+    autoPopulated: true
   phone:
     type: Word
     canIdentify: true
     label: Phone
     description: The phone contact number for the person
-    fieldset: general
+    fieldset: contact
+    autoPopulated: true
   isActive:
     type: Boolean
     canFilter: true
@@ -57,17 +64,17 @@ properties:
     canFilter: true
     label: Active
     description: Whether or not the person is still working at the FT
-    fieldset: general
+    autoPopulated: true
   source:
     type: Word
     label: Source
     description: "Where the data for this person comes from, via People API: workday, salesforce, ldap, github, slack, multi."
-    fieldset: general
+    autoPopulated: true
   proposedId:
     type: Word
     label: Source
     description: "This user's id in: workday, ldap, github or slack. `name.lastname` if no id found."
-    fieldset: general
+    autoPopulated: true
   techDirectorFor:
     type: Group
     label: Tech director for group
@@ -119,5 +126,7 @@ properties:
 fieldsets:
   general:
     heading: General information
+  contact:
+    heading: Contact details
   network:
     heading: Network
