--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
 		"js-yaml": "^3.12.0",
 		"jsforce": "^1.9.1",
 		"lodash": "^4.17.10",
-		"neo4j-driver": "^1.6.1",
+		"neo4j-driver": "~1.6.1",
 		"neo4j-graphql-js": "~0.1.28",
 		"sinon": "^6.2.0",
 		"uuid": "^3.2.1"
