--- a/schema/types/Healthcheck.yaml
+++ b/schema/types/Healthcheck.yaml
@@ -24,7 +24,7 @@ properties:
     # required: true
     canIdentify: true
     label: URL of the healthcheck endpoint
-    description: The full URL of the endpoint, including the "/__health"
+    description: The full URL of the endpoint. You should include the "__health" part of the url, if relevant
     examples:
      - https://my-new-app.ft.com/__health
   monitors:
