--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -5,7 +5,10 @@ CircleCiVersion:
     ONE: '1.0'
     TWO: '2.0'
 SystemLifecycle:
-  description: The lifecycle stage of a system
+  description: |
+    The lifecycle stage of a system.
+    Note that 'Dormant' should be used for systems that are currently
+    not actively used, but may not be fully decommissioned yet
   options:
     - Preproduction
     - Production
